[package]
name = "bevy_tiled_camera"
edition = "2021"
authors = ["sark"]
description = "A camera for rendering low resolution pixel art in bevy."
homepage = "https://github.com/sarkahn/bevy_tiled_camera"
keywords = ["bevy", "2d", "camera", "pixels"]
license = "MIT"
readme = "README.md"
version = "0.4.0"

[dependencies]
bevy = {path="../bevy", version="0.8.0-dev", default_features=false, features=["bevy_render", "bevy_core_pipeline"]}
sark_grids = {path="../sark_grids_rs", version="0.5.0"}

[dev-dependencies]
assert_approx_eq = "1.1.0"
bevy = {path="../bevy", version="0.8.0-dev", default-features = false, features = ["png", "bevy_render", "bevy_core_pipeline", "bevy_winit",  "bevy_sprite", "bevy_text"]}
