[package]
name = "bevy_tiled_camera"
edition = "2021"
authors = ["sark"]
description = "A camera for rendering low resolution pixel art in bevy."
homepage = "https://github.com/sarkahn/bevy_tiled_camera"
keywords = ["bevy", "2d", "camera", "pixels"]
license = "MIT"
readme = "README.md"
version = "0.5.2"

[features]
dev = [
    "bevy/dynamic_linking",
]

[dependencies]
bevy = { version="0.10", default_features=false, features=["bevy_render", "bevy_core_pipeline"]}
sark_grids = {path="../sark_grids_rs", version="0.5.6"}

[dev-dependencies]
assert_approx_eq = "1.1.0"
bevy = { version="0.10", default-features = false, features = ["png", "bevy_core_pipeline", "bevy_asset", "bevy_render", "bevy_winit",  "bevy_sprite"]}
